--- a/buildspec.yml
+++ b/buildspec.yml
@@ -78,33 +78,33 @@ phases:
                     ports:
                       - containerPort: 8080
                     env:
-                      - name: bookstore-cm       #configmap
-                        valueFrom:               #configmap
-                          configMapKeyRef:       #configmap
-                            name: bookstore-cm   #configmap
-                            key: config_url      #configmap
+                      - name: port-list     #configmap
+                        valueFrom:          #configmap
+                          configMapKeyRef:  #configmap
+                            name: port-list #configmap
+                            key: port2      #configmap
                     resources:
                       limits:       #HPA
                         cpu: 500m   #HPA
                       requests:     #HPA
                         cpu: 200m   #HPA
+                    readinessProbe:
+                      httpGet:
+                        path: /actuator/health
+                        port: 8080
+                      initialDelaySeconds: 10
+                      timeoutSeconds: 2
+                      periodSeconds: 5
+                      failureThreshold: 10
+                    livenessProbe:
+                      httpGet:
+                        path: /actuator/health
+                        port: 8080
+                      initialDelaySeconds: 120
+                      timeoutSeconds: 2
+                      periodSeconds: 5
+                      failureThreshold: 5
           EOF
-#                    readinessProbe:
-#                      httpGet:
-#                        path: /actuator/health
-#                        port: 8080
-#                      initialDelaySeconds: 10
-#                      timeoutSeconds: 2
-#                      periodSeconds: 5
-#                      failureThreshold: 10
-#                    livenessProbe:
-#                      httpGet:
-#                        path: /actuator/health
-#                        port: 8080
-#                      initialDelaySeconds: 120
-#                      timeoutSeconds: 2
-#                      periodSeconds: 5
-#                      failureThreshold: 5
 #cache:
   #paths:
-    #- '/root/.m2/**/*'
+    #- '/root/.m2/**/*' 
